Add links to php pages + resolve problems call object personnage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <ol>
             <li>
-                <a href="index.php">Exécution de tous les chapitres à la suite</a> > <a href="https://youtu.be/xmoOvoiPNhU">Vidéo de Grafikart</a>
+                <a href="index.php">Exécution de tous les chapitres à la suite</a> > <a href="https://www.youtube.com/playlist?list=PLjwdMgw5TTLVDKy8ikf5Df5fnMqY-ec16">Vidéo de Grafikart</a>
             </li>
             <li>
                 <a href="1.poo.php">La programmation orientée objet en PHP</a> > <a href="https://youtu.be/xmoOvoiPNhU">Vidéo de Grafikart</a>
