--- a/index.html
+++ b/index.html
@@ -12,94 +12,94 @@
     <div>
         <ol>
             <li>
-                <a href="index.php">Exécution de tous les chapitres à la suite</a> > <a href="https://www.youtube.com/playlist?list=PLjwdMgw5TTLVDKy8ikf5Df5fnMqY-ec16">Vidéo de Grafikart</a>
+                <a href="https://www.youtube.com/playlist?list=PLjwdMgw5TTLVDKy8ikf5Df5fnMqY-ec16">[Vidéo]</a> - <a href="index.php">Ensemble des vidéos</a> 
             </li>
             <li>
-                <a href="1.poo.php">La programmation orientée objet en PHP</a> > <a href="https://youtu.be/xmoOvoiPNhU">Vidéo de Grafikart</a>
+                <a href="https://youtu.be/xmoOvoiPNhU">[Vidéo]</a> - <a href="1.poo.php">La programmation orientée objet en PHP</a> 
             </li>
             <li>
-                <a href="2.visibility.php">La visibilité public / private</a> > <a href="https://youtu.be/zZ_tVAPfGAA">Vidéo de Grafikart</a>
+                <a href="https://youtu.be/zZ_tVAPfGAA">[Vidéo]</a> - <a href="2.visibility.php">La visibilité public / private / protected</a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="https://youtu.be/rTGmcdFAWqw">[Vidéo]</a> - <a href="3.form-example.php">Exemple de formulaire</a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
             <li>
-                <a href=""></a> > <a href="">Vidéo de Grafikart</a>
+                <a href="">[Vidéo]</a> - <a href=""></a>
             </li>
         </ol>
     </div>
