--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div>
-        <ol>
+        <ol start="0">
             <li>
                 <a href="https://www.youtube.com/playlist?list=PLjwdMgw5TTLVDKy8ikf5Df5fnMqY-ec16">[Vidéo]</a> - <a href="index.php">Ensemble des vidéos</a> 
             </li>
@@ -24,7 +24,7 @@
                 <a href="https://youtu.be/rTGmcdFAWqw">[Vidéo]</a> - <a href="3.form-example.php">Exemple de formulaire</a>
             </li>
             <li>
-                <a href="">[Vidéo]</a> - <a href=""></a>
+                <a href="https://youtu.be/KAL1vJtHces">[Vidéo]</a> - <a href="4.documentation.php">La documentation PHP</a>
             </li>
             <li>
                 <a href="">[Vidéo]</a> - <a href=""></a>
